--- a/VueTest/02_模板语法/test.html
+++ b/VueTest/02_模板语法/test.html
@@ -31,12 +31,31 @@
 
 <div id="app">
   <h2>1. 双大括号表达式</h2>
+    <p>{{msg}}</p>
 
   <h2>2. 指令一: 强制数据绑定</h2>
+  <a v-bind:href="url">百度</a>
+  <a :href="url"></a>
 
   <h2>3. 指令二: 绑定事件监听</h2>
-
+  <button v-on:click="test">test1</button>
 </div>
 
 </body>
+<script src="../js/vue.js"></script>
+<script>
+  new Vue ({
+    el: '#app',
+    data: {
+      msg: "这是一个demo",
+      url: "https://www.baidu.com"
+    },
+    methods:{
+      test(event){
+        alert(event.target.textContent+"******"+this.msg)
+      }
+    }
+  })
+
+</script>
 </html>
