--- a/VueTest/04_class与style绑定/test.html
+++ b/VueTest/04_class与style绑定/test.html
@@ -32,14 +32,36 @@
 
 <div id="demo">
   <h2>1. class绑定: :class='xxx'</h2>
-
+  <div class="classC" :class="myClass"> xxx是字符串</div>
+  <div :class='{classA: hasA, classB: hasB}'>xxx是对象</div>
+  <div :class='["classA", "classB"]'>xxx是数组</div>
   <h2>2. style绑定</h2>
+  <div :style="{ color: myColor, fontSize: mySize + 'px' }">变色</div>
 
+  <button @click='update'>变身</button>
 </div>
 
 <script type="text/javascript" src="../js/vue.js"></script>
 <script type="text/javascript">
-
+  new Vue ({
+    el:'#demo',
+    data: {
+      myClass:'classA',
+      hasA: true,
+      hasB: false ,
+      myColor: 'bule',
+      mySize: 20,
+    },
+    methods: {
+      update() {
+        this.myClass = 'classB'
+        this.hasA = !this.hasA
+        this.hasB = !this.hasB
+        this.myColor = 'yellow'
+        this.mySize = 30
+      }
+    }
+  })
 </script>
 </body>
 </html>
