--- a/VueTest/06_列表渲染/test.html
+++ b/VueTest/06_列表渲染/test.html
@@ -17,14 +17,45 @@
 
 <div id="demo">
   <h2>测试: v-for 遍历数组</h2>
-
+  <ul>
+    <li v-for='(person, index) in persons'>{{index}}--{{person.id}}--{{person.name}}--{{person.age}}
+    ---<button @click='deleteP(index)'>删除</button>
+    ---<button @click='updateP(index, {id: Date.now(), name:"Cat", age:10})'>更新</button>
+  </li>
+  </ul>
+  
   <h2>测试: v-for 遍历对象</h2>
-
+  <ul>
+    <li v-for='(key, value) in persons[2]'>
+      --{{key}}--{{value}}
+    </li>
+  </ul>
 </div>
 
 <script type="text/javascript" src="../js/vue.js"></script>
 <script type="text/javascript">
-
+  new Vue({
+    el: '#demo',
+    data: {
+      persons: [ // 给persons添加setter, 一旦persons变了更新界面
+        {id: 1, name: 'Tom', age: 18},
+        {id: 3, name: 'Jack', age: 20},
+        {id: 5, name: 'Rose', age: 17},
+        {id: 7, name: 'Bob', age: 19},
+        {id: 8, name: 'Jerry', age: 21},
+      ]
+    },
+    methods: {
+      deleteP(index){
+        this.persons.splice(index, 1)
+      },
+      updateP(index,newP){
+      this.persons[index]= newP;
+      this.persons.splice(index, 1, newP)
+    }
+    }
+   
+  })
 </script>
 </body>
 </html>
