--- a/VueTest/07_事件处理/test.html
+++ b/VueTest/07_事件处理/test.html
@@ -23,16 +23,52 @@
 <div id="example">
 
   <h2>1. 绑定监听</h2>
+  <button @click='test1'>test1</button>
+  <button @click='test2("周2")'>test2</button>
+  <button @click='test3("周2", $event)'>test3</button>
 
   <h2>2. 事件修饰符</h2>
+  <div style="width: 200px; height: 200px; background: gold" @click="test4">
+    <div style="width: 100px; height:100px; background: red" @click.stop="test5">test5</div>
+  </div>
+
+  <a href="http://www.baidu.com" @click.prevent='test6'>test6</a>
 
   <h2>3. 按键修饰符</h2>
+  <input type="text" @keyup.enter='test7'>
+  <input type="text" @keyup.65='test7'>
 
 </div>
 
 <script type="text/javascript" src="../js/vue.js"></script>
 <script type="text/javascript">
-
+  new Vue({
+    el: '#example',
+    data: {},
+    methods: {
+      test1(event) {
+        alert(event.target.innerHTML)
+      },
+      test2(name) {
+        alert(name)
+      },
+      test3(name, event) {
+        alert(name + '***'+ event.target.innerHTML)
+      },
+      test4() {
+        alert('outer')
+      },
+      test5(event) {
+        alert('inner')
+      },
+      test6(event) {
+        alert('点击了链接')
+      },
+      test7(event) {
+        alert(event.target.value)
+      },
+    }
+  })
 </script>
 </body>
 </html>
