--- a/VueTest/10_过渡&动画/test.html
+++ b/VueTest/10_过渡&动画/test.html
@@ -3,6 +3,24 @@
 <head>
   <meta charset="UTF-8">
   <title>10_过渡&动画1</title>
+  <style>
+    .xxx-enter-active, .xxx-leave-active {
+      transition: opacity 5s
+    }
+    .xxx-enter, .xxx-leave-to {
+      opacity: 0;
+    }
+    .move-enter-active {
+      transition:  3s
+    }
+    .move-leave-active {
+      transition:  1s
+    }
+    .move-enter, .move-leave-to {
+      opacity: 0;
+      transform: translateX(20px)
+    }
+  </style>
 </head>
 <body>
 <!--
@@ -19,11 +37,38 @@
   xxx-leave-active: 指定隐藏的transition
   xxx-enter: 指定隐藏时的样式
 -->
+<div id="demo">
+  <button @click="show = !show">
+    Toggle
+  </button>
+  <transition name="xxx">
+    <p v-show="show">hello</p>
+  </transition>
+</div>
 
+<div id="demo2">
+  <button @click="show = !show">
+    Toggle2
+  </button>
+  <transition name="move">
+    <p v-show="show">hello</p>
+  </transition>
+</div>
 
 <script type="text/javascript" src="../js/vue.js"></script>
 <script type="text/javascript">
-
+  new Vue({
+    el: '#demo',
+    data: {
+      show: true,
+    }
+  })
+  new Vue({
+    el: '#demo2',
+    data: {
+      show: true,
+    }
+  })
 </script>
 </body>
 </html>
