--- a/VueTest/11_过滤器/test.html
+++ b/VueTest/11_过滤器/test.html
@@ -22,11 +22,28 @@
 <!--需求: 对当前时间进行指定格式显示-->
 <div id="test">
   <h2>显示格式化的日期时间</h2>
-</div>
+  <p>{{startTime}}</p>
+  <p>{{startTime | dateFomat}}</p>
+  <p>{{startTime | dateFomat('YYYY-MM-DD')}}</p>
+  <p>{{startTime | dateFomat('HH:mm:ss')}}</p>
 
+</div>
+ 
+
+<script src="https://cdn.bootcss.com/moment.js/2.24.0/moment.js"></script>
 <script type="text/javascript" src="../js/vue.js"></script>
 <script>
 
+  Vue.filter('dateFomat', function (value, formatStr) {
+    return moment(value).format(formatStr ||'YYYY-MM-DD HH:mm:ss')
+  })
+
+  new Vue({
+    el: '#test',
+    data: {
+      startTime: Date.now() - 10000
+    }
+  })
 </script>
 </body>
 </html>
