--- a/VueTest/12_指令/test.html
+++ b/VueTest/12_指令/test.html
@@ -7,7 +7,7 @@
 <body>
 <!--
 常用内置指令
-  v:text : 更新元素的 textContent
+  v-text : 更新元素的 textContent
   v-html : 更新元素的 innerHTML
   v-if : 如果为true, 当前标签才会输出到页面
   v-else: 如果为false, 当前标签才会输出到页面
@@ -20,12 +20,27 @@
   v-cloak : 使用它防止闪现表达式, 与css配合: [v-cloak] { display: none }
 -->
 <div id="example">
+  <div v-text='content'></div>
+  <div v-html='content'></div>
 
+  <p ref='name'>XXXX</p>
+  <button @click="hint">提示</button>
 </div>
 
 <script type="text/javascript" src="../js/vue.js"></script>
 <script type="text/javascript">
+  new Vue({
+    el: '#example',
+    data: {
+      content: '<a href="http://www.baidu.com">百度一下</a>' 
+    },
 
+    methods: {
+      hint(){
+        alert(this.$refs.name.innerHTML)
+      }
+    }
+  })
 </script>
 </body>
 </html>
