--- a/VueTest/12_指令/test2.html
+++ b/VueTest/12_指令/test2.html
@@ -28,9 +28,47 @@
   2. 功能类型于v-text, 但转换为全小写
 -->
 
+<div id="test">
+  <p v-upper-text="content"></p>
+  <p v-lower-text="content"></p>
+</div>
+
+<div id="test2">
+    <p v-upper-text="content"></p>
+    <!-- <p v-lower-text="content"></p> -->
+  </div>
+  
 <script type="text/javascript" src="../js/vue.js"></script>
 <script type="text/javascript">
+  // 注册全局指令
+    /*
+    el: element指令属性所在的标签对象
+    binding: 包含指令相关信息数据的对象   value
+     */
 
+  Vue.directive('upper-text', function(el, binding){
+    console.log(el, binding)
+    el.textContent = binding.value.toUpperCase()
+  })
+
+  new Vue({
+    el: '#test',
+    data: {
+      content: 'I Like You'
+    },
+
+    directives: {
+      'lower-text' (el, binding) {
+        el.textContent = binding.value.toLowerCase()
+      }
+    }
+  })
+  new Vue({
+    el: '#test2',
+    data: {
+      content: 'I Like You2222'
+    },
+  })
 </script>
 </body>
 </html>
